[gd_scene load_steps=2 format=3 uid="uid://b6r4wry16kxsh"]

[ext_resource type="Script" uid="uid://b1n8nm82jg6vl" path="res://Entities/Components/AttackComponent/targeting_component.gd" id="1_4qwlv"]

[node name="TargetingComponent" type="Area2D"]
script = ExtResource("1_4qwlv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="body_shape_exited" from="." to="." method="_on_body_shape_exited"]
